[gd_scene load_steps=9 format=3 uid="uid://dvwtfyiyutoia"]

[ext_resource type="Script" path="res://Scripts/slime_final.gd" id="1_08cih"]
[ext_resource type="Texture2D" uid="uid://bcqlwdrllov77" path="res://Assets/sprites/slime_green.png" id="1_dvsh1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pob60"]
atlas = ExtResource("1_dvsh1")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueovg"]
atlas = ExtResource("1_dvsh1")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7okmx"]
atlas = ExtResource("1_dvsh1")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_awh0y"]
atlas = ExtResource("1_dvsh1")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_acwph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pob60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueovg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7okmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awh0y")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qev50"]
size = Vector2(10, 12)

[node name="Area2D" type="Area2D"]
collision_mask = 3
script = ExtResource("1_08cih")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_acwph")

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-13, 0)

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(11, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_qev50")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
